--- a/src/main/resources/templates/EmailPasswordResetToken.html
+++ b/src/main/resources/templates/EmailPasswordResetToken.html
@@ -8,8 +8,7 @@
 <body>
     <h3>Hello, <span th:text="${name}">User</span></h3>
     <p>We received a request to reset your password. Please use the following link to reset it:</p>
-    <a href="https://deeplinking-pathmates.vercel.app/reset-password/${token}/${email}" 
-       th:href="@{https://deeplinking-pathmates.vercel.app/reset-password/${token}/${email}}">
+    <a th:href="@{https://deeplinking-pathmates.vercel.app/reset-password/{token}/{email}(token=${token}, email=${email})}">
         Reset Password
     </a>
     <p>If you did not request this, please ignore this email.</p>
